# modern-cryptology

./: .gitmodules  CMakeLists.txt  README.md
CommonLib/: CMakeLists.txt  ioworker.cpp  ioworker.h  logger.cpp  logger.h  mylog.h  test_common_lib.cpp
DifferentialCryptanalysisOfBlockCiphers/: CMakeLists.txt  HeysCipher.c  HeysCipher.cpp  HeysCipher.h  Log.h  RoundKey.c  RoundKey.cpp  RoundKey.h  ioworker.cpp  ioworker.h  main.c  main.cpp
DifferentialCryptanalysisOfBlockCiphers/tests/: test_round_key.cpp
